syntax = "proto3";

package tz.v1;

option go_package = "repairCopilotBot/tz-bot/proto/tz/v1;tzv1";


service TzService {
  rpc CheckTz(CheckTzRequest) returns (CheckTzResponse);
}

message CheckTzRequest {
  bytes file = 1;
  string filename = 2;
  string request_id = 3;
}

message CheckTzResponse {
  string html_text = 1;
  string css = 2;
  string docId = 3;
  repeated TzError errors = 4;
  repeated TzError errors_missing = 5;
  string fileId = 6;
}

message TzError {
  int32 id = 1;
  string title = 2;
  string text = 3;
  string type = 4;
}